--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,12 +54,12 @@ jobs:
               cd ${{github.workspace}}
               tar -cjvf gcc.tar.bz2 -C product .
               sleep infinity
-    clean:
-        runs-on: ubuntu-latest
-        permissions:
-            actions: write
-        steps:
-        - run: |
-              sudo apt update
-              sudo apt install -y --no-install-recommends python3-aiohttp
-              curl https://bitbucket.org/chaowenguo/common/raw/main/clean.py | python3 - ${{secrets.GITHUB_TOKEN}}
+#    clean:
+#        runs-on: ubuntu-latest
+#        permissions:
+#            actions: write
+#        steps:
+#        - run: |
+#              sudo apt update
+#              sudo apt install -y --no-install-recommends python3-aiohttp
+#              curl https://bitbucket.org/chaowenguo/common/raw/main/clean.py | python3 - ${{secrets.GITHUB_TOKEN}}
